<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/pref_title">

    <PreferenceCategory
        android:key="app_preferences"
        android:title="@string/pref_title">

        <SwitchPreferenceCompat
            android:id="@+id/shapes_mode"
            android:summary="@string/shapes_mode_preference_summary"
            android:key="@string/prefs_shapes_mode_key"
            app:title="@string/shapes_mode" />

        <ListPreference
            android:entries="@array/interface_language_names"
            android:entryValues="@array/interface_language_values"
            android:key="@string/prefs_interface_language_key"
            app:useSimpleSummaryProvider="true"
            android:summary="@string/interface_language_summary"
            android:title="@string/interface_language" />
        <PreferenceScreen
            android:title="@string/app_version"
            android:key="app_version"
            android:summary="1.0">
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>