<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/welcome_label"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="116dp"
        android:layout_height="145dp"
        android:scaleType="fitXY"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView1"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/application_logo"
        android:src="@drawable/icsee_logo2" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/error_massage"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />


    <!--    <TextView-->
    <!--            android:gravity="center|bottom"-->
    <!--            android:id="@+id/privacy_policy_link"-->
    <!--            android:textColor="@color/white"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_below="@+id/progressBar"-->
    <!--            android:layout_height="wrap_content"/>-->
    <Button
        android:id="@+id/settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/errorMessage"
        android:background="@null"
        android:gravity="center"
        android:text="@string/settings_about_btn"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>